# nyx-phone-agent

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: ci.yml
agent-app/: build.gradle.kts
agent-core/: build.gradle.kts
agent-launcher/: build.gradle.kts
backend/: build.gradle.kts
docs/: ROADMAP.md
docs/architecture/: README.md  acp.md  event-debounce.md  inference-retry.md  intent-bridge.md  mcp-registry.md  message-queue.md  policy-engine.md  queue-priority.md
docs/hardware/: README.md  aosp-bootloader.md  (+4 more)
gradle/: libs.versions.toml
llm/: CMakeLists.txt  build.gradle.kts
receptionist/: build.gradle.kts
sales/: build.gradle.kts
scripts/: build_nyx_rom.sh  flash_device.sh  provision_path_b.sh
skills/: build.gradle.kts
voice/: CMakeLists.txt  build.gradle.kts
voice/src/main/jni/: kokoro_jni.cpp  whisper_jni.cpp
voice/src/main/kotlin/com/nyx/voice/: VoicePipelineController.kt
voice/src/main/kotlin/com/nyx/voice/barge_in/: BargeInDetector.kt
voice/src/main/kotlin/com/nyx/voice/stt/: SttEngine.kt  WhisperSttEngine.kt
voice/src/main/kotlin/com/nyx/voice/tts/: KokoroTtsEngine.kt  TtsEngine.kt
voice/src/main/kotlin/com/nyx/voice/vad/: EnergyVad.kt  VoiceActivityDetector.kt
voice/src/main/kotlin/com/nyx/voice/wakeword/: KeywordSpottingWakeWord.kt  WakeWordEngine.kt
voice/src/test/kotlin/com/nyx/voice/barge_in/: BargeInDetectorTest.kt
voice/src/test/kotlin/com/nyx/voice/stt/: WhisperSttEngineTest.kt
voice/src/test/kotlin/com/nyx/voice/vad/: EnergyVadTest.kt
(+155 files in other folders)
